[package]
name = "mbmobu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
kanal = "0.1.0-pre8"
memmap2 = "0.6.2"
parking_lot = "0.12.1"
tar = "0.4.38"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros", "sync", "fs", "parking_lot"] }
walkdir = "2.3.3"
zstd-safe = { version = "6.0.5", features = ["zstdmt", "std"] }
