[package]
name = "mbmobu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc", "rand_core"] }
dirs = "5.0.1"
just-argon2 = "1.2.0"
kanal = { version = "0.1.0-pre8", features = ["std-mutex"] }
memmap2 = "0.6.2"
once_cell = "1.17.2"
rand = "0.8.5"
rsa = { version = "0.9.2", default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
tarlib = {package = "tar", version = "0.4.38" }
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "sync", "fs", "io-util", "time", "macros"] }
tokio-util = "0.7.8"
toml = "0.7.4"
twox-hash = { version = "1.6.3", default-features = false }
ulid = "1.0.0"
users = "0.11.0"
walkdir = "2.3.3"
zeroize = { version = "1.6.0", features = ["derive"] }
zstd-safe = { version = "6.0.5", features = ["zstdmt", "std"] }

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
debug = true
